src/objects/Microgen_SWBOM__c.object
<CustomObject>
    <description>Reporting object for Microgen requirements
This object is accessible via the API, and refreshes daily from its source Access table</description>
    <fields>
        <fullName>APC__c</fullName>
        <label>APC</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_ID__c</fullName>
        <label>Application_ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLUR_version_string__c</fullName>
        <label>BLUR_version_string</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <label>Contract_Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Device_Fully_Approved__c</fullName>
        <label>Date_Device_Fully_Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DevApp_Created_Date__c</fullName>
        <label>DevApp_Created_Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Devapp_item_effective_date__c</fullName>
        <label>Devapp_item_effective_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Device_Fully_Approved__c</fullName>
        <label>Device_Fully_Approved</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_ID__c</fullName>
        <label>Device_ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_SWKIT_State__c</fullName>
        <label>Device_SWKIT_State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_in_BOM__c</fullName>
        <label>Include_in_BOM</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_APPLICATION__c</fullName>
        <label>Last_Modified_APPLICATION</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Modified_CONTRACTAPPLICATION__c</fullName>
        <label>Last_Modified_CONTRACTAPPLICATION</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Modified_CONTRACT__c</fullName>
        <label>Last_Modified_CONTRACT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Modified_COUNTRY__c</fullName>
        <label>Last_Modified_COUNTRY</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Modified_DEVICEAPPLICATION__c</fullName>
        <label>Last_Modified_DEVICEAPPLICATION</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Modified_DEVICECOUNTRY__c</fullName>
        <label>Last_Modified_DEVICECOUNTRY</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Modified_SWKIT__c</fullName>
        <label>Last_Modified_SWKIT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Microgen_countries__c</fullName>
        <label>Microgen_countries</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Code_Device__c</fullName>
        <label>Reason_Code_Device</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Code_Last_Modified__c</fullName>
        <label>Reason_Code_Last_Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SWBOM_Reviewed__c</fullName>
        <label>SWBOM_Reviewed</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SWKIT_Effective_Date_c__c</fullName>
        <label>SWKIT_Effective_Date_c</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SWKIT_Item_State__c</fullName>
        <label>SWKIT_Item_State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SWKIT_Name__c</fullName>
        <label>SWKIT_Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SWKIT_creation__c</fullName>
        <label>SWKIT_creation</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SalesModel_Device_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SalesModel_Device_Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesModel_Name__c</fullName>
        <label>SalesModel_Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesModel_SegmentCode__c</fullName>
        <label>SalesModel_SegmentCode</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Microgen_SWBOM</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Device_ID__c</columns>
        <columns>Reason_Code_Device__c</columns>
        <columns>Reason_Code_Last_Modified__c</columns>
        <columns>SalesModel_Name__c</columns>
        <columns>SWKIT_Name__c</columns>
        <columns>SWKIT_Effective_Date_c__c</columns>
        <columns>Application_ID__c</columns>
        <columns>BLUR_version_string__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BLUR_version_string__c</field>
            <operation>equals</operation>
            <value>Blur_Version.0.268.4.MZ616.Retail.en.AU</value>
        </filters>
        <label>Andrew</label>
    </listViews>
    <nameField>
        <label>Microgen_SWBOM_Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Microgen_SWBOMs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>